--- a/.github/workflows/rc-release.yaml
+++ b/.github/workflows/rc-release.yaml
@@ -38,15 +38,15 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
 
-      - name: switch dir
-        run: cd opensearch-operator/
-
       - name: build
+        working-directory: opensearch-operator/
         run: make build
 
       - name: Build and push Docker image
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5
         with:
+          file: opensearch-operator/Dockerfile
+          context: opensearch-operator/
           push: true
           outputs: type=registry
           builder: ${{ steps.buildx.outputs.name }}
