--- a/.github/workflows/rc-release.yaml
+++ b/.github/workflows/rc-release.yaml
@@ -8,6 +8,10 @@ on:
 env:
   IMAGE_NAME: ${{ github.repository }}
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   release:
     runs-on: ubuntu-latest
