--- a/.github/workflows/rc-release.yaml
+++ b/.github/workflows/rc-release.yaml
@@ -19,13 +19,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.4
+
       - name: Setup go
         uses: actions/setup-go@v3
         with:
           go-version: "1.19"
+
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v2
+
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@879dcbb708d40f8b8679d4f7941b938a086e23a7
@@ -45,6 +48,13 @@ jobs:
       - name: build
         working-directory: opensearch-operator/
         run: make build
+
+      - name: Docker login
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5
