--- a/.github/workflows/rc-release.yaml
+++ b/.github/workflows/rc-release.yaml
@@ -21,9 +21,10 @@ jobs:
         uses: actions/checkout@v2.3.4
 
       - name: Setup go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v5
         with:
-          go-version: "1.19"
+          go-version-file: 'go.work'
+          cache: false
 
       - name: Set up Docker Buildx
         id: buildx
