feat(helm): add option to set resources for initHelper (#865)
### Description

This PR adds an option to define resources for initHelper container.

### Issues Resolved

Closes this issue
https://github.com/opensearch-project/opensearch-k8s-operator/issues/866

### Check List
- [X] Commits are signed per the DCO using --signoff 
- [X] Unittest added for the new/changed functionality and all unit
tests are successful
- [X] Customer-visible features documented
- [X] No linter warnings (`make lint`)

By submitting this pull request, I confirm that my contribution is made
under the terms of the Apache 2.0 license.
For more information on following Developer Certificate of Origin and
signing off your commits, please check
[here](https://github.com/opensearch-project/OpenSearch/blob/main/CONTRIBUTING.md#developer-certificate-of-origin).

---------

Signed-off-by: Guilherme Oki <oki.guilherme@gmail.com>

--- a/charts/opensearch-cluster/templates/opensearch-cluster-cr.yaml
+++ b/charts/opensearch-cluster/templates/opensearch-cluster-cr.yaml
@@ -27,6 +27,10 @@ spec:
     imagePullSecrets:
       {{ toYaml .Values.opensearchCluster.initHelper.imagePullSecrets | nindent 6 }}
     {{- end }}
+    {{- if .Values.opensearchCluster.initHelper.resources }}
+    resources:
+      {{- toYaml .Values.opensearchCluster.initHelper.resources | nindent 6 }}
+    {{- end }}
   {{- end }}
   general:
     {{- if .Values.opensearchCluster.general.version }}
