Feature/apply ism policy to existing indices (#3)
* Commented the Tiltfile

* Removed unnecessay comment

* updated the tilt file to have permissions to change the current manager binary

* added the applyToExistingIndices to the ism policy crd

* added comment to the apply type

* operator now applies ism policy to existing indices, if the flag is set. This happens on every reconcile

* created test manifests for the ism policy

* added comment to the ism type applyToExistingIndices

* made the functionality follow the conventions of the previous code

* test happy path (works) + test fail (doesnt work yet)

* fixed test when failed to apply indices

* improved error handling for GetIndices

* added script to clean os cluster and rebuild image

* added scripts for initiating cluster and reloading operator

* removed old script

* Added extra logging and cleaned redundand logging for reconciler

* Fixed script so it applied image to kind

* removed unnecessary event

* added test for when get indices fails

* fixed small format mistakes

* Apply suggestions from code review

modified logging to use V1

Co-authored-by: rkthtrifork <131661717+rkthtrifork@users.noreply.github.com>
Signed-off-by: Mark Myrtoft Bøgelund <mmbo@trifork.com>

---------

Signed-off-by: Mark Myrtoft Bøgelund <mmbo@trifork.com>
Co-authored-by: rkthtrifork <131661717+rkthtrifork@users.noreply.github.com>

--- a/opensearch-operator/config/crd/bases/opensearch.opster.io_opensearchismpolicies.yaml
+++ b/opensearch-operator/config/crd/bases/opensearch.opster.io_opensearchismpolicies.yaml
@@ -42,6 +42,10 @@ spec:
             description: ISMPolicySpec is the specification for the ISM policy for
               OS.
             properties:
+              applyToExistingIndices:
+                description: If true, apply the policy to existing indices that match
+                  the index patterns in the ISM template.
+                type: boolean
               defaultState:
                 description: The default starting state for each index that uses this
                   policy.
