--- a/opensearch-operator/Makefile
+++ b/opensearch-operator/Makefile
@@ -63,8 +63,8 @@ genmocks: mockery
 	$(MOCKERY) --all
 
 .PHONY: test
-test: manifests generate fmt vet envtest genmocks ## Run tests.
-	KUBEBUILDER_ASSETS="$(shell $(ENVTEST) use $(ENVTEST_K8S_VERSION) --bin-dir $(LOCALBIN) -p path)" go test ./... -coverprofile cover.out
+test: manifests generate fmt vet envtest ## Run tests.
+	KUBEBUILDER_ASSETS="$(shell $(ENVTEST) use $(ENVTEST_K8S_VERSION) --bin-dir $(LOCALBIN) -p path)" go test ./...
 
 ##@ Build
 
